// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AIHub Component matches snapshot when closed 1`] = `
<DocumentFragment>
  <div
    class="w-full bg-slate-400 border-t border-gray-700"
  >
    <button
      aria-controls="ai-hub-menu"
      aria-expanded="false"
      class="flex items-center justify-between w-full px-4 py-2 text-left text-gray-600 hover:bg-gray-300 hover:text-gray-600 transition-colors duration-200"
    >
      <span
        class="flex items-center"
      >
        <svg
          class="mr-2"
          fill="currentColor"
          height="20"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 1024 1024"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M632 888H392c-4.4 0-8 3.6-8 8v32c0 17.7 14.3 32 32 32h192c17.7 0 32-14.3 32-32v-32c0-4.4-3.6-8-8-8zM512 64c-181.1 0-328 146.9-328 328 0 121.4 66 227.4 164 284.1V792c0 17.7 14.3 32 32 32h264c17.7 0 32-14.3 32-32V676.1c98-56.7 164-162.7 164-284.1 0-181.1-146.9-328-328-328zm127.9 549.8L604 634.6V752H420V634.6l-35.9-20.8C305.4 568.3 256 484.5 256 392c0-141.4 114.6-256 256-256s256 114.6 256 256c0 92.5-49.4 176.3-128.1 221.8z"
          />
        </svg>
        <span
          class="font-medium"
        >
          AI Hub
        </span>
      </span>
      <svg
        aria-label="caret-up"
        fill="currentColor"
        height="20"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 1024 1024"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`AIHub Component matches snapshot when open 1`] = `
<DocumentFragment>
  <div
    class="w-full bg-slate-300  border-t border-gray-700"
  >
    <button
      aria-controls="ai-hub-menu"
      aria-expanded="true"
      class="flex items-center justify-between w-full px-4 py-2 text-left text-gray-600 hover:bg-gray-300 hover:text-gray-600 transition-colors duration-200"
    >
      <span
        class="flex items-center"
      >
        <svg
          class="mr-2"
          fill="currentColor"
          height="20"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 1024 1024"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M632 888H392c-4.4 0-8 3.6-8 8v32c0 17.7 14.3 32 32 32h192c17.7 0 32-14.3 32-32v-32c0-4.4-3.6-8-8-8zM512 64c-181.1 0-328 146.9-328 328 0 121.4 66 227.4 164 284.1V792c0 17.7 14.3 32 32 32h264c17.7 0 32-14.3 32-32V676.1c98-56.7 164-162.7 164-284.1 0-181.1-146.9-328-328-328zm127.9 549.8L604 634.6V752H420V634.6l-35.9-20.8C305.4 568.3 256 484.5 256 392c0-141.4 114.6-256 256-256s256 114.6 256 256c0 92.5-49.4 176.3-128.1 221.8z"
          />
        </svg>
        <span
          class="font-medium"
        >
          AI Hub
        </span>
      </span>
      <svg
        aria-label="caret-down"
        fill="currentColor"
        height="20"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 1024 1024"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
        />
      </svg>
    </button>
    <div
      aria-labelledby="ai-hub-button"
      class="bg-slate-500 border-t border-gray-700"
      role="menu"
    >
      <a
        class="flex items-center justify-between px-4 py-2 text-sm text-gray-300 border-t border-gray-400 hover:bg-gray-600 transition-colors duration-200"
        href="#"
        role="menuitem"
      >
        Model List
      </a>
      <a
        class="flex items-center justify-between px-4 py-2 text-sm text-gray-300 border-t border-gray-400 hover:bg-gray-600 transition-colors duration-200"
        href="#"
        role="menuitem"
      >
        Prompt Templates
      </a>
    </div>
  </div>
</DocumentFragment>
`;
